--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,11 +1,17 @@
-FROM ams21/cmake:release
+FROM debian:12-slim
 
 WORKDIR /home/src
 
-RUN apk update && \
-    apk add git \
-        add ncurses \ 
-        add ncurses-dev \
-        add ffmpeg
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+	    git \
+            build-essential \
+            cmake \
+            libncurses5-dev \
+            libncursesw5-dev \
+            ffmpeg \
+            jp2a && \
+    rm -rf /var/lib/apt/lists/*
 
-CMD ["/bin/sh"]
+CMD ["/bin/bash"]
+
