feat: added namespace and custom exception throw to 'ThreadPool'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "bitset": "cpp",
         "condition_variable": "cpp",
         "regex": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "map": "cpp"
     }
 }
